RESOLVED FIXED298773
[GTK3] Fix build due to missing header include
https://bugs.webkit.org/show_bug.cgi?id=298773
Summary [GTK3] Fix build due to missing header include
Claudio Saavedra
Reported 2025-09-12 07:33:34 PDT
.
Attachments
Claudio Saavedra
Comment 1 2025-09-12 07:34:21 PDT
EWS
Comment 2 2025-09-12 07:45:00 PDT
Committed 299893@main (2514308cadc8): <https://commits.webkit.org/299893@main> Reviewed commits have been landed. Closing PR #50657 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.