[GTK3] Fix build due to missing header include https://bugs.webkit.org/show_bug.cgi?id=298773

Unreviewed build fix.

* Source/WebKit/WebProcess/InjectedBundle/API/gtk/DOM/WebKitDOMDOMWindow.cpp:

Canonical link: https://commits.webkit.org/299893@main